--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,67 @@
 	<groupId>com.qtpselenium.app.salesforce</groupId>
 	<artifactId>SalesForce-App-Project</artifactId>
 	<version>1.0-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>pom</packaging>
 
 	<name>SalesForce-App-Project</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<cucumber-jvm.version>1.2.4</cucumber-jvm.version>
+		<selenium.version>2.48.2</selenium.version>
+		<junit.version>4.12</junit.version>
 	</properties>
+
+
+	<build>
+		<plugins>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.2.1</version>
+				<executions>
+					<execution>
+						<phase>integration-test</phase>
+
+						<goals>
+							<goal>java</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<executableDependency>
+						<groupId>info.cukes</groupId>
+						<artifactId>cucumber-core</artifactId>
+					</executableDependency>
+
+					<mainClass>cucumber.api.cli.Main</mainClass>
+					<arguments>
+						<argument>--format</argument>
+						<argument>junit:target/cucumber-junit-report/allcukes.xml</argument>
+						<argument>--format</argument>
+						<argument>pretty</argument>
+						<argument>--format</argument>
+						<argument>html:target/cucumber-html-report</argument>
+						<argument>--tags</argument>
+						<argument>@login</argument>
+						<argument>--glue</argument>
+						<argument>com/</argument>
+						<argument>src/</argument>
+
+					</arguments>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>info.cukes</groupId>
+						<artifactId>cucumber-core</artifactId>
+						<version>1.2.4</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+		</plugins>
+
+	</build>
 
 	<dependencies>
 		<dependency>
@@ -20,6 +73,22 @@
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>info.cukes</groupId>
+			<artifactId>cucumber-picocontainer</artifactId>
+			<version>1.2.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.9.9</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.2</version>
 		</dependency>
 
 		<dependency>
@@ -62,32 +131,27 @@
 			<version>4.12</version>
 		</dependency>
 
-<dependency>
-	<groupId>org.mockito</groupId>
-	<artifactId>mockito-all</artifactId>
-	<version>1.10.19</version>
-</dependency>
-<dependency>
-	<groupId>cobertura</groupId>
-	<artifactId>cobertura</artifactId>
-	<version>1.8</version>
-</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.10.19</version>
+		</dependency>
+		<dependency>
+			<groupId>cobertura</groupId>
+			<artifactId>cobertura</artifactId>
+			<version>1.8</version>
+		</dependency>
 
-<dependency>
-	<groupId>org.seleniumhq.selenium</groupId>
-	<artifactId>selenium-java</artifactId>
-	<version>2.48.2</version>
-</dependency>
-<dependency>
-	<groupId>log4j</groupId>
-	<artifactId>log4j</artifactId>
-	<version>1.2.17</version>
-</dependency>
-
-
-
-
-
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>2.48.2</version>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
 
 
 	</dependencies>
