--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,8 @@
 						<argument>pretty</argument>
 						<argument>--format</argument>
 						<argument>html:target/cucumber-html-report</argument>
+						<argument>--format</argument>
+						<argument>json:target/cucumber-json-report/ankit.json</argument>
 						<argument>--tags</argument>
 						<argument>@login</argument>
 						<argument>--glue</argument>
